# stompoxide

./: .gitignore  Cargo.toml  README.md  rustfmt.toml
.github/workflows/: CI.yaml
crates/stompoxide-client/: Cargo.toml  README.md
crates/stompoxide-client/src/: lib.rs  tests.rs
crates/stompoxide-codec/: Cargo.toml  README.md
crates/stompoxide-codec/src/: lib.rs  tests.rs
crates/stompoxide-server/: Cargo.toml  README.md
crates/stompoxide-server/examples/: actix_ws_server.rs  axum_ws_server.rs  hyper_ws_server.rs  stomp_client.html  tcp_server.rs  warp_ws_server.rs
crates/stompoxide-server/src/: http.rs  lib.rs  tests.rs  ws.rs
src/: lib.rs  tests.rs
