[package]
name = "stompoxide-server"
version = "0.1.0"
edition = "2024"
rust-version = "1.86"
license = "MIT"

[dependencies]
stompoxide-codec = { path = "../stompoxide-codec" }
tokio = { version = "1", features = ["net", "time", "sync", "rt", "macros", "rt-multi-thread", "io-util"] }
tokio-util = { version = "0.7", features = ["codec"] }
futures-util = { version = "0.3", default-features = false, features = ["sink"] }
log = "0.4"
tower = { version = "0.5", default-features = false, features = ["util"] }
uuid = { version = "1", features = ["v4"] }

[dev-dependencies]
stompoxide-client = { path = "../stompoxide-client" }
axum = { version = "0.8", features = ["ws"] }
bytes = "1"
tracing-subscriber = "0.3"
hyper = { version = "1", features = ["full"] }
hyper-util = { version = "0.1", features = ["full"] }
hyper-tungstenite = "0.20"
http-body-util = "0.1"
tokio-tungstenite = "0.29"
actix-web = "4"
actix-ws = "0.4"
warp = { version = "0.4", features = ["websocket", "server"] }


