[package]
name = "stompoxide-server"
version = "0.1.0"
edition = "2024"
rust-version = "1.86"
license = "MIT"

[features]
default = ["websocket"]
websocket = ["dep:bytes", "dep:http-body-util", "dep:hyper", "dep:hyper-tungstenite", "dep:hyper-util"]

[dependencies]
stompoxide-codec = { path = "../stompoxide-codec" }
tokio = { version = "1", features = ["net", "time", "sync", "rt", "macros", "rt-multi-thread", "io-util"] }
tokio-util = { version = "0.7", features = ["codec", "io"] }
futures-util = { version = "0.3", default-features = false, features = ["sink"] }
log = "0.4"
tower = { version = "0.5", default-features = false, features = ["util"] }
uuid = { version = "1", features = ["v4"] }
bytes = { version = "1", optional = true }
hyper = { version = "1", features = ["server", "http1"], optional = true }
hyper-util = { version = "0.1", features = ["server", "server-auto", "tokio", "service"], optional = true }
hyper-tungstenite = { version = "0.20", optional = true }
http-body-util = { version = "0.1", optional = true }

[dev-dependencies]
stompoxide-client = { path = "../stompoxide-client" }
axum = { version = "0.8", features = ["ws"] }
tracing-subscriber = "0.3"
actix-web = "4"
actix-ws = "0.4"
warp = { version = "0.4", features = ["websocket", "server"] }
